--- a/.github/workflows/code-formatting.yml
+++ b/.github/workflows/code-formatting.yml
@@ -23,15 +23,11 @@ jobs:
 
       - name: Install code checks
         run: |
-          pip install flake8 isort black
+          pip install flake8 black
 
       - name: Check line length with flake8
         run: |
           flake8 . --max-line-length=120
-
-      - name: Check import order with isort
-        run: |
-          isort . --check-only --diff --line-length 120
 
       - name: Check code formatting with black
         run: |
