--- a/environment.yml
+++ b/environment.yml
@@ -6,8 +6,7 @@ dependencies:
   - python==3.13.5
   - pip==25.2
   - numpy==2.3.2
+  - pillow==11.3.0
   - pygame==2.6.1
   - pyopengl==3.1.9
   - pyopengl-accelerate==3.1.9
-  - pip:
-      - noise==1.2.2
